[tool.poetry]
name = "hilbert"
version = "0.2"
description = "Enjoy mathematics with keyboard instead of pen and paper"
authors = ["gogotanaka <mail@tanakakazuki.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.11.1"
sly = "^0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
